<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2013 Yu AOKI -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dip"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"
        android:orientation="vertical"
        android:background="#CCCCCC">
        <TextView
            android:id="@+id/type_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="6dip"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="#222222"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtype_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#222222"/>
        <TextView
            android:id="@+id/subtype_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="6dip"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="#222222"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#DDDDDD"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#222222"/>
        <TextView
            android:id="@+id/state_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="6dip"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="#222222"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#DDDDDD"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detailed_state_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#222222"/>
        <TextView
            android:id="@+id/detailed_state_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="6dip"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="#222222"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#DDDDDD"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extra_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#222222"/>
        <TextView
            android:id="@+id/extra_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="6dip"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="#222222"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#DDDDDD"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reason_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#222222"/>
        <TextView
            android:id="@+id/reason_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="6dip"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="#222222"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#DDDDDD"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/availability_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#222222"/>
        <TextView
            android:id="@+id/availability_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="6dip"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="#222222"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#DDDDDD"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connected_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#222222"/>
        <TextView
            android:id="@+id/connected_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="6dip"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="#222222"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#DDDDDD"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connecting_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#222222"/>
        <TextView
            android:id="@+id/connecting_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="6dip"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="#222222"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#DDDDDD"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/failover_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#222222"/>
        <TextView
            android:id="@+id/failover_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="6dip"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="#222222"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#DDDDDD"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roaming_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#222222"/>
        <TextView
            android:id="@+id/roaming_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="6dip"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="#222222"/>
    </LinearLayout>

</LinearLayout>
